rabbitmq/rabbitmq-ui-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rabbitmq-ui
  namespace: default
spec:
  parentRefs:
    - name: cilium-gw
      namespace: default
      port: 80
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /rabbitmq
      # filters:
      #   - type: URLRewrite
      #     urlRewrite:
      #       path:
      #         type: ReplacePrefixMatch
      #         replacePrefixMatch: /
      backendRefs:
        - name: rabbitmq
          port: 15672
